# Reinforcement-Learning

./: pyproject.toml
LAB1/: Ex1.ipynb  Ex2.ipynb  vantai.py
huuluan/: Ex1.ipynb
huuluan/LAB02/: q_table_final.txt
huuluan/LAB03/: Lab3.2-st.ipynb  TH02.05_23521371_23520282_23520898.docx  ~$03.05_23521371_23520282_23520898.docx
huuluan/LAB03/results_part2/: comparison_dqn_v2_vs_roundrobin_100eps.csv  comparison_dqn_v2_vs_roundrobin_v2_100eps.csv  comparison_dqn_vs_roundrobin_100eps.csv  comparison_dqn_vs_roundrobin_v1_100eps.csv  comparison_v1.csv  comparison_v2.csv  dqn_dqn_vs_roundrobin_100eps.csv  dqn_v1_basic_dqn_vs_roundrobin_v1_100eps.csv  dqn_v1_v1_episodes.csv  dqn_v2_dqn_v2_vs_roundrobin_100eps.csv  (+8 more)
huuluan/LAB04/: Lab4.1-st.ipynb  TH04.05_23521371_23520282_23520898.docx
huuluan/LAB1/: Ex1.ipynb
vantai/LAB 2/: Lab02_23520282.docx  Lab2.ipynb  part2_hyperparams.csv  part2_vacuum_rewards.csv  ~$b02_23520898.docx
vantai/LAB 3/: Lab3.1-st.ipynb  Lab3.2-st.ipynb  Lab3.2-st_bai2_3.ipynb  report-template-nt549-2026.docx
vantai/LAB 4/: Lab4.1-st.ipynb  Lab4.2-st.ipynb  note-edge-offloading.txt
vantai/LAB1/: Ex1.ipynb  Ex2.ipynb  demo.py  metrics_epsilon_greedy.csv  metrics_greedy.csv  metrics_main.csv  metrics_random.csv  metrics_round_robin.csv  report-template-nt549-2026.docx  requirements.txt
vantai/dqn_cartpole/: agent.py  check_setup.py  config.py  evaluate.py  explore_env.py  main.py  memory.py  model.py  plot_utils.py  policy_net.pth  requirements.txt  test_agent.py  test_memory.py  test_model.py  test_optimize.py  train.py
(+26 files in other folders)
